[gd_scene load_steps=14 format=2]

[ext_resource path="res://core/main.gd" type="Script" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/misc/coin.png" type="Texture" id=4]
[ext_resource path="res://core/pause-menu.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/pointer.png" type="Texture" id=6]
[ext_resource path="res://assets/music/main.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/exit.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/LifeCraft_Font.ttf"

[sub_resource type="DynamicFont" id=2]
size = 112
outline_size = 9
outline_color = Color( 0, 0, 0, 0.54902 )
use_filter = true
extra_spacing_top = 22
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 0.282353, 0, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 0.929412, 0.956863, 0.0980392, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pointer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.535887, 1.46409 ),
"update": 0,
"values": [ 690.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label0:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.972549, 0.364706, 0, 1 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="HUD"]
light_mask = 0
margin_left = 18.0
margin_top = 17.0
margin_right = 1368.0
margin_bottom = 167.0
rect_scale = Vector2( 0.4, 0.4 )
size_flags_horizontal = 9
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
step = 1.0
value = 35.0
rounded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/HealthBar"]
playback_speed = 2.0
anims/blink = SubResource( 3 )

[node name="GoldLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -356.0
margin_top = 22.0
margin_right = 85.0001
margin_bottom = 147.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/GoldLabel"]
playback_speed = 2.0
anims/blink = SubResource( 4 )

[node name="icon" type="Sprite" parent="HUD/GoldLabel"]
position = Vector2( 508.359, 55.2141 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="DepthLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -406.251
margin_top = -87.6601
margin_right = 239.749
margin_bottom = 37.3398
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 3 )
text = "Depth: 9500 ft"
align = 2

[node name="PausePopup" type="Popup" parent="HUD"]
pause_mode = 2
self_modulate = Color( 0.278431, 0.121569, 0.121569, 0.290196 )
light_mask = 0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="HUD/PausePopup"]
self_modulate = Color( 0, 0, 0, 0.666667 )
light_mask = 0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="HUD/PausePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -340.0
margin_right = 134.0
margin_bottom = -215.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0588235, 0.713726, 0.176471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.815686 )
text = "PAUSED"
align = 1
valign = 1

[node name="Label0" type="Label" parent="HUD/PausePopup"]
modulate = Color( 0.989091, 0.74754, 0.60261, 1 )
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.502
margin_top = -545.0
margin_right = 134.502
margin_bottom = -480.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Resume Game"
valign = 1
max_lines_visible = 1

[node name="Label1" type="Label" parent="HUD/PausePopup"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.502
margin_top = -385.0
margin_right = 134.502
margin_bottom = -260.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Quit !"
valign = 1
max_lines_visible = 1

[node name="pointer" type="Sprite" parent="HUD/PausePopup"]
position = Vector2( 710, 568 )
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )
offset = Vector2( 0, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/PausePopup"]
anims/selected = SubResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -11.44
pitch_scale = 0.9
autoplay = true

[node name="SfxExit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -2.017
pitch_scale = 0.45
bus = "Reverb"
